# lifelog

./: .env.example  .gitignore  README.md  docker-compose.yml  lifelog-implementation-todo.md  lifelog-search-engine-spec.md  lifelog-srs.md  pyproject.toml
.claude/: launch.json
app/: __init__.py  config.py
app/api/: auth.py  main.py
app/cli/: main.py
app/enrich/: __init__.py  action.py  base.py  caption.py  clustering.py  faces.py  ocr.py  registry.py  runner.py  tags.py  vlm.py
app/ingest/: __init__.py  audio.py  base.py  browser.py  calendar.py  embedders.py  file_ingestor.py  geocoding.py  images.py  registry.py  runner.py  session.py  text.py  video.py
app/observability/: __init__.py  logging.py
app/proactive/: __init__.py  cards.py  digests.py  insights.py  on_this_day.py  titles.py
app/ranking/: __init__.py  fusion.py  grouper.py  reranker.py
app/retrieval/: __init__.py  answers.py  chat_intent.py  conversation.py  llm_client.py  query_analyzer.py  retriever.py  smoke.py
config/: cpu.env  development.env  gpu.env
docs/: AI_ENRICHMENT_PLAN.md  ARCHITECTURE.md  PRODUCT_SCOPE.md  SETUP.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
scripts/: backfill_text_embeddings.py  check_engine.py  download_models.py  run_ocr_enrich.py  run_vlm_enrich.py
tests/: test_audio_ingest.py  test_chat_intent.py  test_enrichment.py  test_enrichment_phase1.py  test_enrichment_phase2.py  test_image_ingest.py  test_ingest_runner.py  test_multi_modality_grouping.py  test_proactive.py  test_query_intent_classifier_bugfix.py  test_rag_answers.py  test_section10_ingest.py  test_section11_store.py  test_section12_session_query.py  test_section13_retrieval.py  test_section14_api_cli.py  test_section15_16.py  test_section17_privacy.py  test_section18_quality.py  test_smoke_index.py  test_source_registry.py  test_text_ingest.py  test_video_ingest.py  test_voice_search.py
(+29 files in other folders)
