[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lifelog-search"
version = "0.1.0"
description = "Local-first multimodal personal search over journals, media, email, calendar, and browser history."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Life Log Search Contributors" }]
dependencies = [
]

[project.optional-dependencies]
core = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "qdrant-client>=1.12",
  "sentence-transformers>=3.0,<5.0",
  "open_clip_torch>=2.26",
  "torch>=2.3",
  "Pillow>=10.0",
  "exifread>=3.0",
  "langchain-text-splitters>=0.3",
  "rank_bm25>=0.2",
  "watchdog>=4.0",
  "geopy>=2.4",
  "icalendar>=5.0",
  "trafilatura>=1.9",
  "apscheduler>=3.10",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]
optional = [
  "pillow-heif>=0.18",
  "yt-dlp>=2024.8.6",
  "scenedetect>=0.6",
  "opencv-python>=4.10",
  "av>=12.0",
  "imagehash>=4.3",
  "ollama>=0.3",
]
macos = [
  "osxphotos>=0.68",
]
audio = [
  "openai-whisper>=20231117",
  "whisperx>=3.1",
  "pyannote.audio>=3.3",
]
enrich = [
  # OCR (Phase 0). Local, CPU, onnxruntime-based — no torch dependency.
  "rapidocr-onnxruntime>=1.3",
  # Phase 1: captioning (BLIP), zero-shot tags (OpenCLIP, already in core),
  # and X-CLIP action recognition. open_clip/torch come from the core extra.
  "transformers>=4.44",
  "timm>=1.0",
  "av>=12.0",
  # Phase 2: faces. insightface needs onnxruntime; install onnxruntime-gpu for CUDA.
  "insightface>=0.7",
  "onnxruntime>=1.17",
]

[project.scripts]
lifelog = "app.cli.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
